# mcp-subagent-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md
.github/workflows/: ci.yml
docs/: mcp-subagent_tech_design_v0.10.md  mcp-subagent_tech_design_v0.5.md  mcp-subagent_tech_design_v0.6.md  mcp-subagent_tech_design_v0.7.md  mcp-subagent_tech_design_v0.8.md  mcp-subagent_tech_design_v0.9.md  mvp_smoke_v06.md  mvp_smoke_v07.md  mvp_smoke_v08.md  refactor_task_data_structures.md  release_v0.10.0.md  release_v0.6.0.md  release_v0.7.0.md  release_v0.8.0.md  release_v0.8.1.md  release_v0.9.0.md  result_contract_v1.md
examples/agents/: workflow_builder.agent.toml
examples/workspaces/frontend_landing_page/: PLAN.md  PROJECT.md  README.md
examples/workspaces/rust_service_refactor/: PLAN.md  PROJECT.md  (+1 more)
scripts/: release_check.sh  smoke_v06.sh  smoke_v07_release.sh  smoke_v08.sh  smoke_v12_permission.sh
src/: config.rs  connect.rs  cwd.rs  doctor.rs  error.rs  init.rs  lib.rs  logging.rs  main.rs  types.rs
src/mcp/: archive.rs  artifacts.rs  dto.rs  helpers.rs  mod.rs  persistence.rs  review.rs  server.rs  service.rs  state.rs  tools.rs
src/probe/: mod.rs
src/render/: codex.rs  mod.rs
src/runtime/: claude_runner.rs  cleanup.rs  codex_runner.rs  context.rs  dispatcher.rs  gemini_runner.rs  memory.rs  mock_runner.rs  mod.rs  outcome.rs  permission.rs  runner.rs  summary.rs  usage.rs  workspace.rs
src/spec/: core.rs  mod.rs  provider_overrides.rs  registry.rs  runtime_policy.rs  validate.rs  workflow.rs
tests/: e2e_workflow_examples.rs
(+14 files in other folders)
