[package]
name = "mcp-subagent"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gezihuzi/mcp-subagent-rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.2.0", features = [
    "client",
    "server",
    "macros",
    "transport-io",
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
time = { version = "0.3", features = ["serde", "formatting"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v7"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
