[package]
name = "mcp-subagent"
version = "0.10.0"
edition = "2021"
repository = "https://github.com/gezihuzi/mcp-subagent-rs"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rmcp = { version = "1.2.0", features = [
    "client",
    "server",
    "macros",
    "transport-io",
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
